2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: run TAP and "plain" tests with the same $(LOG_COMPILER)
	With this change, it will be easier to override, at make time, the
	shell used to run the tests.
	* tests/Makefile.am (LOG_COMPILER): Define to `$(SHELL)'.
	(TEST_LOG_COMPILER): Re-define to `$(LOG_COMPILER)'.
	(TAP_LOG_COMPILER): Likewise.

2011-08-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: run TAP-based tests explicitly with $(SHELL)
	* tests/Makefile.am (TAP_LOG_COMPILER): Define to `$(SHELL)'.

2011-08-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap driver: handle signals received by the tests being run
	* lib/tap-driver (get_test_exit_message): Also deal with signals,
	by using the `wait' method of the TAP::Parser object instead of
	the `exit' method.  This required the use of the standard perl
	module `POSIX'.
	* doc/automake.texi (Use TAP with the Automake test harness):
	Document that `--ignore-exit' has effect also on terminating
	signals.  Add a "synchronizing" comment that references the tests
	'tap-exit.test' and 'tap-signal.test'.
	* tests/tap-signal.test: Extend and adjust.

2011-08-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test driver: a preparatory refactoring (2)
	* lib/tap-driver (finish): Move code to fetch the message about
	the exit status of the test being run to ...
	(get_test_exit_message): ... this new subroutine.

2011-08-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap driver: a preparatory refactoring (1)
	* lib/tap-driver (finish): Do not flush the TAP stream nor
	fetch the exit status of the TAP producer if running with
	the `--ignore-exit' option.  Obviously, don't try to write
	such exit status in the test log anymore.

2011-08-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	cosmetics: typofix in the name of a function in the TAP driver
	* lib/tap-driver (testuite_error): Renamed ...