@@ -1,5 +1,16 @@
 2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	testsuite: run autogenerated tests with $(LOG_COMPILER) too
+	This change enhances consistency in the testsuite.
+	* tests/Makefile.am: Some cosmetic reordering, to keep the
+	definition of FOO_LOG_COMPILER near to the place where `.foo'
+	is added to $(TEST_EXTENSIONS).
+	(PTEST_LOG_COMPILER): Run `$(srcdir)/parallel-tests.sh' with
+	`$(LOG_COMPILER)', not with `$(SHELL)'.
+	(SHTST_LOG_COMPILER): Likewise.
+
+2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	testsuite: run TAP and "plain" tests with the same $(LOG_COMPILER)
 	With this change, it will be easier to override, at make time, the
 	shell used to run the tests.
